# WIP 

- Refactored the connection handle. The connection handle is now invalidated when the observer disconnects. This is a breaking change.
- Made pg::invoke part of the public API.
- Added doxygen documentation for the public API.
- Changed the observer interface to allow custom observer types.

# v1.0.0

- Initial release