@@ -1,5 +1,6 @@
 # WIP 
 
+- The destructor of subject now calls the disconnect of its observers in the reversed order the in which observers were connected.
 - Refactored the connection handle. The connection handle is now invalidated when the observer disconnects. This is a breaking change.
 - Made pg::invoke part of the public API.
 - Added doxygen documentation for the public API.
